contrast issue fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -7,7 +7,7 @@ body{
     margin: 0;
 }
 header{
-    background: #05668d;
+    background: #055373;
     padding: 0px 1.5rem;
     display: flex;
     justify-content: center;
@@ -40,7 +40,7 @@ nav ul li {
     height: 43px;
 }
 nav .active{
-    background-color: #679436;
+    background-color: #4a7d12;
     font-weight: bold;
 }
 li {
@@ -74,7 +74,7 @@ main h1{
     text-align: justify;
 }
 h2{
-    background-color: #679436;
+    background-color: #4a7d12;
     margin: 0;
     padding-bottom: 7px;
     padding-top: 7px;
@@ -91,7 +91,7 @@ h2{
 }
 footer{
     text-align: center;
-    background: #05668d;
+    background: #055373;
     margin-top: 2rem;
     color: #fff;
 }
